--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,11 @@
                   <a class="dropdown-item" href="#">Write for us</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
+            </li>
+          </ul>
           <form class="d-flex" role="search">
             <input
               class="form-control me-2"
