--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active active" href="/contact.html">Contact Us</a>
+              <a class="nav-link active active" href="/iCoderBootstrap/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
